<resources>
    <string name="app_name">Hunar Online Courses</string>
    <string name="lblSkip">SKIP</string>
    <string name="lblSignHere"><u>Login here</u></string>
    <string name="lblRegisterHere"><u>Register here</u></string>
    <string name="lblAboveFive">Sorry! You have already choosen five categories</string>
    <string name="lblHome">Home</string>
    <string name="lblChat">Chat</string>
    <string name="lblEnrol">Enrol</string>
    <string name="lblToday">Hunar Club</string>
    <string name="lblContact">Contact Us</string>
    <string name="lblNext">Next</string>
    <string name="lblStartLearning">Start Learning</string>
    <string name="lblVerify"> Verify to Register </string>
    <string name="lblVeryLogin">Verify</string>
    <string name="lblApiKey">dsf99898398i3jofklese93</string>
    <string name="lblCourseEnrolNowButton">(Total Course Fee - ₹8,000/-)\nEnrol Now for just ₹3000 + Taxes</string>
    <string name="lblTaxes">Taxes</string>
    <string name="lblEnrolNow">Enrol Now</string>
    <string name="choosePopupMsg">Sorry! You have already choosen five categories</string>
    <string name="AlreadyMember">Already a Student?  </string>
    <string name="enterOtp">Enter OTP</string>
    <string name="resendOtp">Resend OTP</string>
    <string name="lblPreferred"><big><b><font color='#34004E'>Pay Full Fees</font></b></big> <small><b><font color='#34004E'>Get </font></b></small></string>
    <string name="lblPremium"><big><b><font color='#34004E'>Pay in Easy</font></b></big> <small><b><font color='#34004E'>Instalments</font></b></small></string>
    <string name="lblMonth">&#160;Months</string>
    <string name="lblCourseCounselling">With our post-course counselling, we help you to take your skills to a professional level. With our guidance, you could learn about all the career options you have after completing your course.</string>
    <string name="lblWebinars">We bring you free live webinars where industry experts discuss and share interesting facts. The interactive programmes can clear your doubts and help you learn more about the industry so that you can become a professional yourself!</string>
    <string name="lblCareerOptions">On completing this course, you can create beautiful Indian clothes for yourself and others. You can run your tailoring business from home or even start your own boutique and brand!</string>
    <string name="lblAttendWorkshop">For you to develop creative ideas and skills, we conduct free workshops at our centres with industry experts and professionals. It is your golden chance to expand your knowledge and increase your confidence!</string>
    <string name="lblCenter1">Peejay Plaza, Opposite Tycoon Hotel, Door No: 10-1-44/6,1st floor VIP Road, Siripuram, CBM Compound, Asilmetta, Visakhapatnam, Andhra Pradesh 530003</string>
    <string name="lblPhone1">9010100240</string>
    <string name="lblContactus">+91 <u>9010100240</u></string>
    <string name="lblLink1"><u>https://www.hunarcourses.com/</u></string>
    <string name="lblLink2"><u>https://www.hunarcourses.com/</u></string>
    <string name="lblAboutContent">Ever since its inception, the Hunar Group has been imparting skill-based education across the nation.
Our courses in Fashion Design, Interior Design, Jewellery Design, Photography and many others, have had a rippling effect amongst our students, because they give them the choice and chance of indulging in their creative passions.
\n\n
Hunar’s alumni of over 25,000 + members consists of individuals who work with some of the biggest brands in the industry, and those who have forged ahead to become entrepreneurs.
\n\n
Even in its 26th year, the Hunar Institute still strongly upholds its philosophy of
‘Learn, Believe, Create’. Hunar Online Courses is designed to sharpen your skills and to give you the golden opportunity of turning your passion into a certified skill, right from the comfort of your home.
\n\n
So now is the time to dream, explore and learn and empower yourself!
</string>
    <string name="lblAchieversTitle1">Shilpa Waghray</string>
    <string name="lblAchieversTitle2">Mohit Dochania</string>
    <string name="lblAchieversTitle3">Rachna Kimtee</string>
    <string name="lblAchieversSubtitle1">Fashion Designer</string>
    <string name="lblAchieversSubtitle2">Fashion Designer</string>
    <string name="lblAchieversSubtitle3">Fashion Designer</string>
    <string name="lblAchieversDescription1">An ace achiever from Hamstech who showcased her designs at the prestigious Hawaiian Fashion Month on invitation by Ms. CheriVasek. Her garments were worn and appreciated by the First Lady of Hawaii.</string>
    <string name="lblAchieversDescription2">Mohit had a wonderful opportunity to do internship with Neeta Lulla, which launched his career. He has participated in the London Fashion Week 2010 and has made his impressive presence in various trade shows conducted in Milan and Paris, “Mohit Dochania”, his fashion label, caters to some of the most elite fashionistas.</string>
    <string name="lblAchieversDescription3">Rachna Kimtee is the only designer who got the opportunity to participate in India Fashion Week, London, in the GenX category.</string>
    <string-array name="faqs_qns">
        <item>1. What is Hunar Online Courses?</item>
        <item>2. How will Hunar Online Courses help me build my skill?</item>
        <item>3. Who is eligible to enrol in Hunar Online Courses?</item>
        <item>4. What happens once I decide to enrol in a course?</item>
        <item>5. How long will a course registration be active?</item>
        <item>6. Can I enrol in multiple Courses at a same time?</item>
        <item>7. What is the difference between enrolling in a course and signing up for a free lesson?</item>
        <item>8. When can I start my course?</item>
        <item>9. In case of a doubt, how can I reach out to my instructor?</item>
        <item>10. How long can I take to complete one course?</item>
        <item>11. Can I see a demo of how the course are structured?</item>
        <item>12. Will I be able to get in touch with other students?</item>
        <item>13. How and in what form will I receive my certificate at the end of each course?</item>
        <item>14. What are the basic requirements of being able to pursue the online course?</item>
        <item>15. Do I need a continuous internet connection to be able to learn online and watch my tutorials? Can I view tutorials offline?</item>
        <item>16. How can I find help if I have a technical difficulty?</item>
    </string-array>
    <string-array name="faqs_ans">
        <item>Hunar Online Courses, previously known as Hamstech Online Courses, is an initiative of Hamstech Group of Institutes which has over 27 years of experience in Fashion Education. With an alumni portfolio of over 30,000 students, Hamstech takes pride in its ideology of skill-building. More than 8,000 Hamstech students are working with the biggest brands in the industry today and several others are successful entrepreneurs.</item>
        <item>Download our free learning app. Once you enrol, start learning with our video classes, gain 24/7 faculty support, upload assignments and get certified by Neeta Lulla! It’s that simple!</item>
        <item>Anyone with passion for fashion! At Hunar Online Courses, we encourage those who have a unique zeal for pursuing their interest and honing it into a skill. So, if you have a strong keenness for this subject, you’re most welcome!</item>
        <item>Upon making your choice of the course you wish to pursue, you can follow 6 simple steps to start learning:\n
                Step 1: Click on enrol/buy button.\n
                Step 2: Fill out your details to register as a student.\n
                Step 3: Make an online payment using your debit/ credit care or net banking. You can also select the cash-on-delivery option.\n
                Step 4: Use the auto-generated password sent to your email to log in to our Learning Management System which is just a portal for your courses and all the information required.\n
                Step 5: Receive your Free Starter Kit which has the materials you need to begin your classes.\n
                Step 6: Go to your My Courses page and start your lesson number 1!
        </item>
        <item>Your registration is active for a period of 6 months from the day of your login credentials are facilitated.</item>
        <item>Yes, you most certainly can! Hunar Online Courses allows you to learn as many skills as you want at the same time.</item>
        <item>A free lesson gives you a glimpse of learning techniques and a feel of the classes. Enrolment helps you access the course available on our learning management system making a payment.</item>
        <item>Being an online learning platform, Hunar Online Courses allows you to enrol any time during the course of a year. So, ENROL NOW and avail the starter kit to give you a smooth beginning.</item>
        <item>Hunar Online Courses ensures that your learning is both interactive and simple. Our faculty members are reachable via Skype, chat, email and phone. Our instructors and mentors will be by your side every step of the way throughout your learning journey.</item>
        <item>You can complete the course as per your convenience. You may take anywhere between a few hours to a few weeks to a few months to complete the course.</item>
        <item>Please sign up for a free trial to get an essence of the entire chosen course. They will give you an idea of our teaching methodology and the place of the classes.</item>
        <item>Yes, during the sessions, you can interact with your peers through Discussion Boards and forums.</item>
        <item>Upon completion of the course, a digital certificate will be e-mailed to your registered e-mail id.</item>
        <item>You may need a basic device like a laptop or even a smartphone with an active internet connection. It’s as simple as that!</item>
        <item>The content of our courses can be accessed while connected to the internet.</item>
        <item>Contact the Support Team on the toll free number (10:00 AM – 6:00 PM) or leave an email at any time. Your issue will be resolved at the earliest.</item>
    </string-array>
    <string name="lblOtpExpire">OTP Expires in:  2:00 Minutes</string>
    <string name="lblStaterKit">Start Your Free Trial Now!</string>
    <string name="lblMobileNumber">Mobile Number</string>
    <string name="lblStories">STORIES</string>
    <string name="otpMessage">If you didn\u0027t receive your OTP, you can also enter
the last 4 digits of your mobile number to log in.</string>
    <string name="sendusMsg">Send Us A Message!</string>
    <string name="txt_terms_conditions"><u>Terms &amp; Conditions\nPrivacy Policy</u></string>
    <string name="start_your_courses">To start your course, just follow these 3 simple steps:</string>
    <string name="courses_steps">Step 1:\n
    Confirm your address when our team calls you so that we can send your starter kit to your doorstep.\n\n
    Step 2:\n
    Pay your fees to unlock your course and receive your username &amp; password.\n\n
    Step 3:\n
    Download the Hunar Learning App, login and start your course!</string>
    <string name="pay_success">Payment Successful!</string>
    <string name="register_now_to_get">Register Now to Get</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_city_name">Enter City Name</string>
</resources>