<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp">

    <!--<ImageView
        android:id="@+id/imgAchievers1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"/>

    <ImageView
        android:id="@+id/imgAchievers2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imgAchievers3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="10dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgAchievers1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="0.7"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.3"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversTitle1"
                android:textColor="@color/shape_orange"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversSubtitle1"
                android:textColor="@color/muted_blue"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversDescription1"
                android:textColor="@color/black_two"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversTitle2"
                android:textColor="@color/shape_orange"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversSubtitle2"
                android:textColor="@color/muted_blue"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversDescription2"
                android:textColor="@color/black_two"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imgAchievers2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="0.7"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/imgAchievers3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="0.7"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.3"
            android:paddingLeft="10dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversTitle3"
                android:textColor="@color/shape_orange"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversSubtitle3"
                android:textColor="@color/muted_blue"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAchieversDescription3"
                android:textColor="@color/black_two"
                android:fontFamily="@font/dinprobold"
                android:textSize="13sp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>