<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/language_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/imgTop"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="230dp"
                android:layout_height="110dp"
                android:src="@drawable/hunar_online_logo"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:visibility="visible"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif"
                android:text="@string/register_now_to_get"
                android:textColor="@color/dark_pink"
                android:textSize="21sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/muted_blue"
                android:layout_marginTop="15dp"/>

            <include
                layout="@layout/register_branding_images"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/dinpro"
                android:text="@string/lblStaterKit"
                android:textColor="@color/dark_grey_blue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/editfield_bllue_stroke"
                android:hint="@string/enter_your_name"
                android:gravity="center_vertical"
                android:textColorHint="@color/gray"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:paddingBottom="7dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/editfield_bllue_stroke">

                <LinearLayout
                    android:id="@+id/linCountryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        app:ccp_textSize="13sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="7dp">

                    <EditText
                        android:id="@+id/txtMobile"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:hint="@string/lblMobileNumber"
                        android:layout_toRightOf="@+id/ccp"
                        android:gravity="center_vertical"
                        android:textColorHint="@color/gray"
                        android:paddingBottom="12dp"
                        android:paddingLeft="10dp"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:importantForAutofill="no"
                        android:inputType="number"/>

                </LinearLayout>

            </LinearLayout>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/txtSelectCity"
                android:paddingLeft="20dp"
                android:paddingBottom="7dp"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_city_name"
                android:textColorHint="@color/gray"
                android:background="@drawable/editfield_bllue_stroke"
                android:gravity="center_vertical"
                android:maxLength="25"
                android:maxLines="1"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/linOtpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnResend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resendOtp"
                    android:textAllCaps="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/dinprobold"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_shape_gray"/>
                <TextView
                    android:id="@+id/txtExpire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblOtpExpire"
                    android:textColor="@color/black_two"
                    android:fontFamily="@font/dinprobold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"/>

                <EditText
                    android:id="@+id/txtOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enterOtp"
                    android:gravity="center_horizontal"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="15dp"
                    android:padding="10dp"
                    android:maxLength="4"
                    android:textColor="@color/black"
                    android:inputType="number"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnGetOtp"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:text="@string/lblStartLearning"
                android:textAllCaps="false"
                android:textColor="@color/muted_blue"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="17sp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/pink_stroke_white"/>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblVerify"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/white"
                android:fontFamily="@font/dinprobold"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_shape_gray"/>

            <TextView
                android:id="@+id/otpMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/otpMessage"
                android:gravity="center"
                android:drawablePadding="10dp"
                android:textColor="@color/colorAccent"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/chatUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_whatsapp_logo"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sendusMsg"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/muted_blue"
                    android:text="@string/AlreadyMember"/>

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:text="@string/lblSignHere"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/dark_pink"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTermsCond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_terms_conditions"
                android:textColor="@color/muted_blue"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="@font/dinprobold"/>

            <ImageView
                android:id="@+id/imgBottom"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_gravity="bottom"
                android:scaleType="fitXY"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
